Fix location reset button border on Safari

--- a/static/gen/packed.css
+++ b/static/gen/packed.css
@@ -53,7 +53,7 @@ a[href] {
 
 #location-reset {
   margin-left: calc(-16px - 36px);
-  margin-block: 1px;
+  margin-block: 3px;
   background-color: white;
   border: 1px solid transparent;
 }
